Fix style for overflow read-more link

--- a/packages/bvaughn-architecture-demo/components/console/MessagesList.module.css
+++ b/packages/bvaughn-architecture-demo/components/console/MessagesList.module.css
@@ -38,6 +38,7 @@
 
 .OverflowLink {
   color: var(--color-error);
+  text-decoration: underline;
 }
 .OverflowLink:hover {
   text-decoration: none;
